TEST_PROGRAMS/INVALID/justin_domignue/invalid-2.min
# Declarations should all come before statements
var x: int;
x = x + 1;
var y: float; # error

